# functioncalming

./: LICENSE  README.md  pyproject.toml
functioncalming/: __init__.py  client.py  context.py  distil.py  types.py  utils.py
tests/: conftest.py  test_completion.py  test_contextmanager.py  test_distillery.py  test_functions.py  test_middleware.py  test_model_generation.py  test_structured_outputs.py
