[tool.poetry]
name = "functioncalming"
version = "0.0.15"
description = "Robust and reliable OpenAI tool calling"
authors = ["Philipp Dowling <phdowling@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/phdowling/functioncalming"
repository = "https://github.com/phdowling/functioncalming"
keywords = [
    "openai",
    "function-calling",
    "pydantic",
    "validation",
    "llm",
    "tool-calling",
    "retry",
    "structured-ouputs"
]

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.95.1"
pydantic = "^2.5.2"
docstring-parser = "^0.16"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
