[tool.poetry]
name = "functioncalming"
version = "0.0.20"
description = "Robust and reliable OpenAI tool calling"
authors = ["Philipp Dowling <phdowling@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/phdowling/functioncalming"
repository = "https://github.com/phdowling/functioncalming"
keywords = [
    "openai",
    "function-calling",
    "pydantic",
    "validation",
    "llm",
    "tool-calling",
    "retry",
    "structured-ouputs"
]

[tool.poetry.dependencies]
python = "^3.12"
openai = ">=1.99.6"
pydantic = "^2.5.2"
docstring-parser = "^0.16"
pytest-httpx = "^0.35.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^0.21.1"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
